fix(sidebar): improve sidebar panel header spacing

--- a/theme/parts/sidebar.css
+++ b/theme/parts/sidebar.css
@@ -111,6 +111,29 @@ link[href="chrome://browser/content/sidebar/sidebar-main.css"] + .wrapper {
 	margin-block: 0 !important;
 }
 
+.sidebar-panel {
+	padding-block: 0 !important;
+	
+	.sidebar-panel-heading  {
+		margin-block-end: 12px !important;
+	}
+}
+#sidebar-panel-header {
+	padding-block: 0 !important;
+	padding-inline: var(--gnome-content-padding) !important;
+}
+.sidebar-panel-heading {
+	padding-block: var(--gnome-content-padding) !important;
+
+	> h4 {
+		margin: 0 !important;
+	}
+}
+sidebar-panel-header {
+	margin-block-start: 0 !important;
+	padding: 0 !important;
+}
+
 /* Settings lists */
 /* TODO: Move to lists.css */
 .customize-group .extensions,
